[package]
name = "fs-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { path = "../rust-fatfs", version = "0.4"}
fscommon = { version = "0.1.1", features = ["std"] }
chrono = { version = "0.4" }
clap = "2.33.3"
libc = "=0.2.125"