[package]
name = "maturin"
version = "0.1.0"
authors = ["scpointer <jax01@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "= 0.6"
bitflags = "= 1.3.2"
xmas-elf = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f2fb8b9" }

log = { path = "../dependencies/log", version = "0.4" }
sbi-rt = { path = "../dependencies/sbi-rt" }
bitmap-allocator = { path = "../dependencies/bitmap-allocator" }
numeric-enum-macro = { path = "../dependencies/numeric-enum-macro" }
lock = { path = "../dependencies/kernel-sync" }
# lock = { git = "https://github.com/DeathWish5/kernel-sync" }

fatfs = { path = "../rust-fatfs", version = "0.4", default-features = false, features = [
    "alloc",
    "lfn",
] }
fscommon = { path = "../fscommon", version = "0.1.1" }

syscall = { path = "../syscall" }
epoll = { path = "../epoll" }
base-file = { path = "../base-file" }
bitset = { path = "../bitset" }
task-trampoline = { path = "../task-trampoline" }
poll = { path = "../poll" }
select = { path = "../select" }
timer = { path = "../timer" }
range-action-map = { path = "../range-action-map", default-features = false }

[features]
sifive = ["timer/sifive"]
