[package]
name = "maturin"
version = "0.1.0"
authors = ["scpointer <responsibilities@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "= 0.6"
bitflags = "= 1.3.2"
xmas-elf = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f2fb8b9" }

log = { path = "../dependencies/log", version = "0.4" }
sbi-rt = { path = "../dependencies/sbi-rt" }
bitmap-allocator = { path = "../dependencies/bitmap-allocator" }
numeric-enum-macro = { path = "../dependencies/numeric-enum-macro" }
lock = { path = "../dependencies/kernel-sync" }
# lock = { git = "https://github.com/DeathWish5/kernel-sync" }

fatfs = { path = "../modified_dependencies/rust-fatfs", version = "0.4", default-features = false, features = [
    "alloc",
    "lfn",
] }
fscommon = { path = "../modified_dependencies/fscommon", version = "0.1.1" }

syscall = { path = "../modules/syscall" }
epoll = { path = "../modules/epoll" }
base-file = { path = "../modules/base-file" }
bitset = { path = "../modules/bitset" }
task-trampoline = { path = "../modules/task-trampoline" }
poll = { path = "../modules/poll" }
select = { path = "../modules/select" }
timer = { path = "../modules/timer" }
range-action-map = { path = "../modules/range-action-map", default-features = false }
maturin-page-frame = { path = "../modules/maturin-page-frame", default-features = false }
polyhal = { path = "../../polyhal", features = ["kcontext"]}

[features]
sifive = ["timer/sifive"]
