[package]
name = "range-action-map-test"
version = "0.1.0"
authors = ["scpointer <jax01@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4"}
bitflags = "= 1.3.2"
range-action-map = { path = "../range-action-map" }
