[package]
name = "maturin-page-frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ["std"]

[dependencies]
bitmap-allocator = { path = "../../dependencies/bitmap-allocator" }
lock = { path = "../../dependencies/kernel-sync" }