[package]
name = "poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "= 1.3.2"

base-file = { path = "../base-file" }
task-trampoline = { path = "../task-trampoline" }
syscall = { path = "../syscall" }
timer = { path = "../timer" }
